<resources>
    <string name="app_name">VForum</string>
    <string name="group_name">Group </string>
    <string name="option_image">Option Image</string>
    <string name="topic">Topic</string>
    <string name="name">Name</string>
    <string name="posted_by">Posted by</string>
    <string name="username">Username</string>
    <string name="post_title">Post title</string>
    <string name="post_description">Post description</string>
    <string name="comment_icon">Comment Icon</string>
    <string name="like_icon">Like Icon</string>
    <string name="feed_icon">Feed Icon</string>
    <string name="post_icon">Post Icon</string>
    <string name="user_icon">User icon</string>
    <string name="log_in">Log In</string>
    <string name="add_comment">Add Comment</string>
    <string name="password">Password</string>
    <string name="show_password_icon">Show password Icon</string>
    <string name="log_in_upper">LOG IN</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up">Sign up</string>
    <string name="logo_icon">Logo Icon</string>
    <string name="register">Register</string>
    <string name="email">Email</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="sign_up_upper">SIGN UP</string>
    <string name="have_an_account">Have an account?</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="menu_home">Menu Home</string>
    <string name="menu_gallery">Menu Gallery</string>
    <string name="user_avatar">User Avatar</string>
    <string name="personal_info">Personal Info</string>
    <string name="homepage_setting">Homepage Setting</string>
    <string name="change_password">Change Password</string>
    <string name="my_post">My Post</string>
    <string name="log_out">Log Out</string>
    <string name="use_this_for_comment_section">Use this for comment section</string>
    <string name="return_to_homepage">Return to Homepage</string>
    <string name="notification_icon">Notification icon</string>
    <string name="notification_description">Notification description</string>
    <string name="event_icon">Event icon</string>
    <string name="event_item_icon">Event item icon</string>
    <string name="event_title">Event Title</string>
    <string name="event_description">Event description</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="successfully">Successfully!</string>
    <string name="display_name">Display Name</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="enter_your_display_name">Enter your display name</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="existing_user">Existing user?</string>
    <string name="welcome">Welcome !</string>
    <string name="we_just_need_to_get_a_few_details_from_you_to_get_you_signed_up_to_the_service">We just need to get a few details from you to get you signed up to the service.</string>
    <string name="log_in_lower">Log in</string>
    <string name="login">Login</string>
    <string name="join_us">Join us</string>
    <string name="android">Android</string>
    <string name="created_by">Created by</string>
    <string name="kane">Kane</string>
    <string name="home">Home</string>
    <string name="memory">Memory</string>
    <string name="event">Event</string>
    <string name="notification">Notification</string>
    <string name="show_topic">Show topic</string>
    <string name="feed_description">Feed Description</string>
    <string name="feed_tags_not_official">Feed tags, not official</string>
    <string name="group">Group</string>
    <string name="post_description_edt">Post description: *</string>
    <string name="post_title_edt">Post title: *</string>
    <string name="topic_edt">Topic:</string>
    <string name="group_edt">Group:</string>
    <string name="create">CREATE</string>
    <string name="create_post">CREATE POST</string>
    <string name="update">Update</string>
    <string name="update_post">Update post</string>
    <string name="user">User</string>
    <string name="setting">Setting</string>
    <string name="member">Member</string>
    <string name="profile">Profile</string>
    <string name="gender_">Gender:</string>
    <string name="role_">Role:</string>
    <string name="kane_mail">kane1234@gmail.com</string>
    <string name="email_">Email:</string>
    <string name="_500_nposts">500+\nPosts</string>
    <string name="_200_nanswers">200+\nAnswers</string>
    <string name="this_group_has_no_topic">This group has no topic !</string>
    <string name="_10_topics">10 topics</string>
    <string name="change_avatar">Change avatar</string>

    <string name="_10">10</string>

    <string name="old_password">Old password</string>
    <string name="new_password">New password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="confirm">Confirm</string>
    <string name="post">Post</string>
    <string name="create_post_lower">Create Post</string>
    <string name="comment">Comment</string>
    <string name="write_a_comment">Write a comment ...</string>
    <string name="no_comments_yet">No Comments Yet</string>
    <string name="be_the_first_to_comment">Be the first to comment.</string>

</resources>