<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/homeFragment"
        android:icon="@drawable/ic_baseline_home_24"
        android:enabled="true"
        android:title="@string/home" />
    <item
        android:id="@+id/memoryFragment"
        android:icon="@drawable/ic_baseline_memory_24"
        android:enabled="true"
        android:title="@string/memory"/>
    <item
        android:id="@+id/eventFragment"
        android:icon="@drawable/ic_baseline_event_24"
        android:enabled="true"
        android:title="@string/event"/>
    <item
        android:id="@+id/notificationFragment"
        android:icon="@drawable/ic_baseline_notifications_24"
        android:enabled="true"
        android:title="@string/notification"/>
    <item
        android:id="@+id/userFragment"
        android:icon="@drawable/ic_user"
        android:enabled="true"
        android:title="@string/profile"/>
</menu>