<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/background1"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageButton
        android:id="@+id/detail_back_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/back_button"
        android:tint="#6600cc"
        android:background="@color/transparent"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/return_to_homepage" />

    <TextView
        android:id="@+id/detail_group_tv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/group_name"
        android:textSize="25sp"
        android:textColor="#04040F"
        android:textStyle="bold"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="5dp"
        app:layout_constraintTop_toBottomOf="@+id/detail_back_button"
        app:layout_constraintStart_toStartOf="parent"/>

    <ImageView
        android:id="@+id/detail_option_iv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/feed_option"
        android:layout_marginEnd="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/detail_group_tv"
        android:contentDescription="@string/option_image" />

    <TextView
        android:id="@+id/detail_topic_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/topic"
        android:textSize="22sp"
        android:textColor="#04040F"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@+id/detail_group_tv"
        app:layout_constraintStart_toStartOf="@+id/detail_group_tv"/>

    <TextView
        android:id="@+id/detail_topic_name_tv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:textSize="22sp"
        android:textStyle="bold"
        android:textColor="#ff6600"
        android:layout_marginStart="10dp"
        app:layout_constraintTop_toTopOf="@+id/detail_topic_tv"
        app:layout_constraintStart_toEndOf="@+id/detail_topic_tv"/>

    <TextView
        android:id="@+id/detail_post_by_tv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/posted_by"
        android:textSize="20sp"
        android:textColor="#04040F"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@+id/detail_topic_tv"
        app:layout_constraintStart_toStartOf="@+id/detail_group_tv" />

    <TextView
        android:id="@+id/detail_username_post_tv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/username"
        android:textSize="20sp"
        android:textColor="#ff6600"
        android:textStyle="bold"
        android:layout_marginStart="10dp"
        app:layout_constraintTop_toTopOf="@+id/detail_post_by_tv"
        app:layout_constraintStart_toEndOf="@+id/detail_post_by_tv"/>

    <TextView
        android:id="@+id/detail_post_title_tv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/post_title"
        android:textSize="30sp"
        android:textColor="#04040F"
        android:textStyle="bold"
        android:textAlignment="center"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@+id/detail_post_by_tv"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/detail_post_description_tv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/post_description"
        android:textSize="20sp"
        android:textColor="#04040F"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@+id/detail_post_title_tv"
        app:layout_constraintStart_toStartOf="@+id/detail_group_tv"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/detail_line1"
        android:layout_width="0dp"
        android:layout_height="2dp"
        android:layout_marginTop="20dp"
        android:background="#3333ff"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/detail_post_description_tv" />

    <ImageView
        android:id="@+id/detail_like_iv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/icon_like"
        android:layout_marginTop="20dp"
        android:layout_marginStart="10dp"
        app:layout_constraintStart_toStartOf="@id/detail_post_description_tv"
        app:layout_constraintTop_toBottomOf="@id/detail_post_description_tv"
        android:contentDescription="@string/like_icon"
        app:tint="@color/white" />

    <ImageView
        android:id="@+id/detail_comment_iv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/post_comment"
        android:layout_marginStart="80dp"
        app:layout_constraintStart_toEndOf="@+id/detail_like_iv"
        app:layout_constraintTop_toTopOf="@id/detail_like_iv"
        android:contentDescription="@string/comment_icon"
        app:tint="@color/white"/>

    <TextView
        android:id="@+id/detail_line2"
        android:layout_width="0dp"
        android:layout_height="2dp"
        android:background="#3333ff"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/detail_like_iv" />

    <TextView
        android:id="@+id/detail_comment"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/use_this_for_comment_section"
        app:layout_constraintStart_toStartOf="@+id/detail_group_tv"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/detail_line2"/>

</androidx.constraintlayout.widget.ConstraintLayout>