<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/background1"

    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/group_tv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/group_name"
        android:textSize="22sp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:layout_marginStart="4dp"
        android:id="@+id/groupname_post_tv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:textSize="22sp"
        android:textColor="@color/yellow"
        app:layout_constraintTop_toTopOf="@+id/group_tv"
        app:layout_constraintStart_toEndOf="@+id/group_tv"/>

    <TextView
        android:layout_marginStart="4dp"
        android:id="@+id/group_name_tv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:textSize="18sp"
        android:textColor="@color/yellow"
        app:layout_constraintTop_toTopOf="@+id/topic_tv"
        app:layout_constraintStart_toEndOf="@+id/topic_tv"/>

    <ImageView
        android:id="@+id/option_iv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/feed_option"
        android:layout_marginEnd="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/group_tv"
        android:contentDescription="@string/option_image"
        app:tint="@color/white"/>

    <TextView
        android:id="@+id/topic_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/topic"
        android:textSize="18sp"
        android:textColor="@color/white"
        android:layout_marginTop="3dp"
        app:layout_constraintTop_toBottomOf="@+id/group_tv"
        app:layout_constraintStart_toStartOf="@+id/group_tv"/>

    <TextView
        android:layout_marginStart="4dp"
        android:id="@+id/topic_name_tv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:textSize="18sp"
        android:textColor="@color/yellow"
        app:layout_constraintTop_toTopOf="@+id/topic_tv"
        app:layout_constraintStart_toEndOf="@+id/topic_tv"/>

    <TextView
        android:id="@+id/post_by_tv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/posted_by"
        android:textSize="15sp"
        android:textColor="@color/white"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/topic_tv"
        app:layout_constraintStart_toStartOf="@+id/group_tv" />

    <TextView
        android:layout_marginStart="4dp"
        android:id="@+id/username_post_tv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/username"
        android:textSize="15sp"
        android:textColor="@color/yellow"
        app:layout_constraintTop_toTopOf="@+id/post_by_tv"
        app:layout_constraintStart_toEndOf="@+id/post_by_tv"/>

    <TextView
        android:id="@+id/post_title_tv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/post_title"
        android:textSize="30sp"
        android:textColor="@color/light_orange"
        android:textStyle="bold"
        android:textAlignment="center"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="3dp"
        app:layout_constraintTop_toBottomOf="@+id/post_by_tv"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/post_description_tv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/post_description"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="3dp"
        app:layout_constraintTop_toBottomOf="@+id/post_title_tv"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <ImageView
        android:id="@+id/like_iv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/icon_like"
        android:layout_marginTop="20dp"
        android:layout_marginStart="10dp"
        app:layout_constraintStart_toStartOf="@id/post_description_tv"
        app:layout_constraintTop_toBottomOf="@id/post_description_tv"
        android:contentDescription="@string/like_icon"
        app:tint="@color/white"/>

    <ImageView
        android:id="@+id/comment_iv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/post_comment"
        android:layout_marginStart="80dp"
        app:layout_constraintStart_toEndOf="@+id/like_iv"
        app:layout_constraintTop_toTopOf="@id/like_iv"
        android:contentDescription="@string/comment_icon"
        app:tint="@color/light_orange"/>

    <TextView
        android:id="@+id/line"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#808080"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/like_iv" />

</androidx.constraintlayout.widget.ConstraintLayout>