<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/login_register_background"
    android:layout_height="match_parent">

    <ProgressBar
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:id="@+id/progress_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <ImageView
        android:id="@+id/logo_icon_iv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="20dp"
        android:src="@drawable/logo"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/logo_icon" />

    <TextView
        android:id="@+id/login_title_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/log_in"
        android:textColor="#000000"
        android:textSize="30sp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="@+id/logo_icon_iv"
        app:layout_constraintEnd_toEndOf="@+id/logo_icon_iv"
        app:layout_constraintTop_toBottomOf="@+id/logo_icon_iv"/>

    <TextView
        android:visibility="gone"
        android:id="@+id/login_message_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/successfully"
        android:textColor="#000"
        app:layout_constraintEnd_toEndOf="@+id/logo_icon_iv"
        app:layout_constraintStart_toStartOf="@+id/logo_icon_iv"
        app:layout_constraintTop_toBottomOf="@+id/login_title_tv" />

    <TextView
        android:id="@+id/username_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/username"
        android:textSize="17sp"
        android:textColor="#ff6600"
        android:textStyle="bold"
        android:layout_marginTop="40dp"
        android:layout_marginStart="40dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_message_tv"/>

    <EditText
        android:hint="@string/enter_your_email"
        android:id="@+id/username_edt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="17sp"
        android:textColor="#000000"
        android:layout_marginTop="10dp"
        android:background="@android:color/transparent"
        app:layout_constraintStart_toStartOf="@+id/username_tv"
        app:layout_constraintTop_toBottomOf="@+id/username_tv"
        app:layout_constraintEnd_toEndOf="@+id/line_1"
        android:inputType="text" />

    <TextView
        android:id="@+id/line_1"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#808080"
        android:layout_marginTop="10dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/username_edt" />

    <TextView
        android:id="@+id/password_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:textSize="17sp"
        android:textColor="#ff6600"
        android:textStyle="bold"
        android:layout_marginTop="10dp"
        android:layout_marginStart="40dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/line_1"/>

    <EditText
        android:hint="@string/enter_your_password"
        android:id="@+id/password_edt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="17sp"
        android:textColor="#000000"
        android:layout_marginTop="10dp"
        android:layout_marginStart="40dp"
        android:background="@android:color/transparent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password_tv"
        android:autofillHints="@string/password"
        android:inputType="textPassword" />

    <ImageView
        android:id="@+id/pw_visibility_iv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:src="@drawable/icon_visibility"
        android:layout_marginEnd="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/password_edt"
        android:contentDescription="@string/show_password_icon" />

    <TextView
        android:id="@+id/line_2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#808080"
        android:layout_marginTop="10dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pw_visibility_iv" />

    <TextView
        android:id="@+id/login_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/rectangle_sign_in_0"
        android:text="@string/log_in_upper"
        android:textColor="#ffffff"
        android:textAlignment="center"
        android:gravity="center"
        android:textSize="18sp"
        android:layout_marginTop="40dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/line_2" />

    <TextView
        android:id="@+id/have_account_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/don_t_have_an_account"
        android:textSize="16sp"
        android:textColor="#000000"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="@+id/login_tv"
        app:layout_constraintTop_toBottomOf="@+id/login_tv"/>

    <TextView
        android:id="@+id/sign_up_click_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        android:textSize="16sp"
        android:textColor="#cc2900"
        android:textStyle="bold"
        android:layout_marginTop="20dp"
        android:layout_marginStart="15dp"
        app:layout_constraintStart_toEndOf="@+id/have_account_tv"
        app:layout_constraintTop_toBottomOf="@+id/login_tv"/>

</androidx.constraintlayout.widget.ConstraintLayout>
