<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/background1"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:id="@+id/feed_iv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/feed_option"
        android:layout_marginEnd="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/option_image"
        app:tint="@color/white"/>

    <TextView
        android:id="@+id/feed_description_tv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/feed_description"
        android:textSize="25sp"
        android:textColor="@color/light_orange"
        android:textAlignment="center"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@+id/feed_iv"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/feed_tags_tv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/feed_tags_not_official"
        android:textSize="20sp"
        android:textColor="#e6e6e6"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@+id/feed_description_tv"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/feed_line1"
        android:layout_width="0dp"
        android:layout_height="2dp"
        android:layout_marginTop="20dp"
        android:background="#3333ff"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/feed_tags_tv" />

    <ImageView
        android:id="@+id/feed_like_iv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/icon_like"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/feed_tags_tv"
        android:contentDescription="@string/like_icon"
        app:tint="@color/white" />

    <ImageView
        android:id="@+id/feed_comment_iv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/post_comment"
        android:layout_marginStart="80dp"
        app:layout_constraintStart_toEndOf="@+id/feed_like_iv"
        app:layout_constraintTop_toTopOf="@id/feed_like_iv"
        android:contentDescription="@string/comment_icon"
        app:tint="@color/light_orange"/>

    <TextView
        android:id="@+id/feed_line2"
        android:layout_width="0dp"
        android:layout_height="2dp"
        android:background="#3333ff"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/feed_like_iv" />

    <TextView
        android:id="@+id/feed_comment"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/use_this_for_comment_section"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/feed_line2"/>

</androidx.constraintlayout.widget.ConstraintLayout>