<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageButton
        android:id="@+id/event_item_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/feed_event3"
        android:layout_marginTop="10dp"
        android:background="#ffffff"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/event_item_icon" />

    <TextView
        android:id="@+id/event_item_start_date"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:textColor="#000066"
        android:textSize="12sp"
        android:text="@string/start_date"
        android:textAlignment="center"
        app:layout_constraintStart_toStartOf="@+id/event_item_icon"
        app:layout_constraintEnd_toEndOf="@+id/event_item_icon"
        app:layout_constraintTop_toBottomOf="@+id/event_item_icon" />

    <TextView
        android:id="@+id/event_item_end_date"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:textColor="#000066"
        android:textSize="12sp"
        android:text="@string/end_date"
        android:textAlignment="center"
        app:layout_constraintStart_toStartOf="@+id/event_item_icon"
        app:layout_constraintEnd_toEndOf="@+id/event_item_icon"
        app:layout_constraintTop_toBottomOf="@+id/event_item_start_date" />

    <TextView
        android:id="@+id/event_item_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:textColor="#0000ff"
        android:textSize="30sp"
        android:text="@string/event_title"
        android:textAlignment="center"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/event_item_icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/event_item_description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:textColor="#000000"
        android:textSize="15sp"
        android:textAlignment="center"
        android:text="@string/event_description"
        app:layout_constraintStart_toEndOf="@+id/event_item_icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/event_item_title" />

</androidx.constraintlayout.widget.ConstraintLayout>